<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pool Game Scorer</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_af">Average Finish</string>
    <string name="main_af_button">Average Finish</string>
    <string name="main_8ball_button">(Coming Soon)\n8-Ball Tally</string>
    <string name="main_bowl_button">(Coming Soon)\nBowlliards</string>
    <string name="main_games">Games</string>
    <string name="main_rules">Rules</string>
    <string name="main_scores">Scores</string>
    <string name="af_new_game">New Game</string>
    <string name="af_round_count">After 0</string>
    <string name="af_add_round">Add Round</string>
    <string name="af_position">Pos</string>
    <string name="af_name">Name</string>
    <string name="af_new">New</string>
    <string name="af_af">AF</string>
    <string name="af_choose_num">Choose Number Of Players: </string>
    <string name="af_start">Start</string>
    <string name="af_back">Back</string>
    <string name="af_enter_names">Enter Player Names: </string>

</resources>