<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/main_games"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/eight_ball" />

            <Button
                android:id="@+id/button2"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/main_8ball_button" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/af_icon" />

            <Button
                android:id="@+id/button1"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/main_af_button" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/two" />

            <Button
                android:id="@+id/button3"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/main_bowl_button" />

        </TableRow>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/button4"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.22"
                    android:text="@string/main_rules" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.22"
                    android:text="@string/main_scores" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.70"
                android:src="@drawable/poolsticks" />

        </LinearLayout>

    </TableLayout>

</LinearLayout>